--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,14 @@ body {
   /* -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
 }
+.world-container {
+  position: relative;
+  overflow: auto;
+  width: 800px;
+  height: 400px;
 
+  align-items: center;
+}
 /* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
