--- a/src/features/map/styles.css
+++ b/src/features/map/styles.css
@@ -2,25 +2,95 @@
     display: inline-flex;
     /* background-color: #42b842; */
 }
-.grass {
-    background-image: url('/tiles/plains80.png')
+.grass-0 {
+    background-image: url('/tiles/plains80-0.png')
 }
-
-.rock {
+.grass-1 {
+    background-image: url('/tiles/plains80-1.png')
+}
+.grass-2 {
+    background-image: url('/tiles/plains80-2.png')
+}
+.grass-3 {
+    background-image: url('/tiles/plains80-3.png')
+}
+.grass-4 {
+    background-image: url('/tiles/scrubland80-0.png')
+}
+.grass-5 {
+    background-image: url('/tiles/woodlands80-0.png')
+}
+.grass-6 {
+    background-image: url('/tiles/woodlands80-1.png')
+}
+.grass-7 {
+    background-image: url('/tiles/woodlands80-2.png')
+}
+.grass-8 {
+    background-image: url('/tiles/woodlands80-3.png')
+}
+.grass-9 {
+    background-image: url('/tiles/hills80-0.png')
+}
+.grass-10 {
+    background-image: url('/tiles/hills80-1.png')
+}
+.grass-11 {
+    background-image: url('/tiles/scrubland80-2.png')
+}
+.grass-12 {
+    background-image: url('/tiles/scrubland80-1.png')
+}
+.grass-13 {
+    background-image: url('/tiles/highlands80-0.png')
+}
+.grass-14 {
+    background-image: url('/tiles/highlands80-1.png')
+}
+.rock-0 {
+    background-image: url('/tiles/mountain80-1.png')
+}
+.rock-1 {
+    background-image: url('/tiles/mountain80-2.png')
+}
+.rock-2 {
     background-image: url('/tiles/mountain80-3.png')
 }
-.tree{
-    background-image: url('/tiles/forest80.png')
+.tree-0{
+    background-image: url('/tiles/forest80-0.png')
 }
-.water {
-     background-image: url('/tiles/marsh80.png')
+.tree-1{
+    background-image: url('/tiles/forest80-1.png')
+}
+.tree-2{
+    background-image: url('/tiles/forest80-2.png')
+}
+.tree-3{
+    background-image: url('/tiles/forest80-3.png')
+}
+.water-0 {
+     background-image: url('/tiles/water80-0.png')
+}
+.water-1 {
+     background-image: url('/tiles/water80-1.png')
+}
+.water-2 {
+     background-image: url('/tiles/water80-2.png')
 }
 .fog {
     background-color:   black;
 }
 .base {
-    background-image: url('/tiles/ranger.png')
+    background-image: url('/tiles/base.png')
 }
 .food {
     background-image: url('/tiles/food.png')
+}
+.food-img {
+    position: absolute;
+    top: 40px;
+    left: 20px;
+    align-content: center;
+    width: 30px;
+    height: 30px;
 }
