--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,70 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: 'Finger Paint', cursive;
+  /* -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif; */
     background-color: black;
     color:  white;
   /* -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
 }
+.game-container {
+  display: flex;
+  flex-direction: column;
+}
+.wcc {
+  display: flex;
+  justify-content: center;
+  border: 20px white;
+}
 .world-container {
+  margin: 5px;
   position: relative;
   overflow: auto;
   width: 800px;
   height: 400px;
-
+  /* border: 2px wheat; */
+  /* margin: 0 50px 10px 50px; */
   align-items: center;
 }
-/* code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-} */
+.splashBox {
+  text-align: center;
+  font-size: 3em;
+}
+.menu {
+  font-size: 1.5em;
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  margin-right: 100px;
+}
+.menu-link {
+  text-decoration: none;
+  color: whitesmoke;
+}
+.menu-link:hover {
+    color:  grey;
+}
+.title {
+
+}
+.footer {
+  text-align: center;
+}
+.map-buttons {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+.map-buttons > button {
+  margin-right: 10px;
+}
+.UI {
+  display: flex;
+  justify-content: center;
+}
+.aboutBox {
+  margin-left: 20px;
+}
